Изменение формата уведомлений